# st-musicdb

./: .env.example  .replit  analyze_messages.py  app.py  clear_database.py  main.py  media_indexer_bot.session  media_indexer_bot.session-journal  pyproject.toml  replit.md  requirements.txt  test_audio_metadata.py  test_caption.py  test_channel_extraction.py  test_extraction.py  test_real_urls.py  test_u2063_extraction.py
bot/: __init__.py  database.py  handlers.py  utils.py
