[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fpdf2>=2.8.3",
    "openpyxl>=3.1.5",
    "pymongo>=4.13.2",
    "pyrogram>=2.0.106",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.3",
    "Flask>=3.0.0",
    "tgcrypto==1.2.5",
    "xlsxwriter>=3.2.5",
]
